# Rag

./: .gitignore  CLAUDE.md  Exercise 3- Variant B.archimate  agent.py  app.py  exercise-1-mishu.md  generate_architecture.py  ingest.py  pyproject.toml  readme.md  requirements.txt
Archimate-Exercise/Exercise-1-Madhusudhana/: exercise-1-Madhusudhana  exercise-1-Madhusudhana.archimate
Archimate-Exercise/Exercise-1-Mishu/: exercise-1-mishu.archimate
Archimate-Exercise/Exercise-2/: exercise-2-team.archimate.bak
Archimate-Exercise/Exercise-3/: exercise-3-decision.md
Archimate-Exercise/Exercise-3/Variant A/: exercise-3-Varaint A.archimate  exercise-3-Varaint A.archimate.bak
Archimate-Exercise/Exercise-3/Varient-B-Microsoft Copilot Studio/: Exercise 3- Variant B.archimate  Exercise 3- Variant B.archimate.bak
Archimate-Exercise/Exercise-4/Variant-B-modular-monolith/: exercise4-s2-variant-B-modular-monolith-1.archimate
Archimate-Exercise/Exercise-4/Varient A - Microservice/: Exercise4-s2-Microservice.archimate  Exercise4-s2-Microservice.archimate.bak
exercise-1-Madhusudhana/: exercise-1-Madhusudhana.md
exercise-1-supreeth/: exercise-1-supreeth.archimate  exercise-1-supreeth.md
exercise-2-team/: exercise-2-notes.md  exercise-2-team.archimate
