[project]
name = "rag-agent"
version = "0.1.0"
description = "RAG + Function-Calling Agent — Exercise 1"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.30.0",
    "chromadb>=0.5.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "tiktoken>=0.7.0",
    "pypdf>=4.2.0",
    "beautifulsoup4>=4.12.0",
    "streamlit>=1.35.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
